adding the correctly branch

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,7 +2,7 @@ name: Deployando nuestras primeras actions de Github
 
 on:
   push:
-    branches: [main]
+    branches: [master]
 
 jobs:
   platzi: 
